--- a/less/fuelux-override/variables.less
+++ b/less/fuelux-override/variables.less
@@ -31,6 +31,6 @@
 
 //Selectable Hover, Selected, Selected Hover
 // -------------------------
-@selectableHover: #f1f1f1;
+@selectableHover: #EBF7FC;
 @selected: #efefef;
 @selectedHover: #d7d7d7;
