Turn on column list highlighting in main.js for fuelux.html. Modifiy repeater-list.less to have #EBF7FC (and variants) for the hover and sorted colours.

--- a/less/fuelux-override/repeater-list.less
+++ b/less/fuelux-override/repeater-list.less
@@ -125,27 +125,6 @@
 			}
 
 
-			&.selected {
-				&:focus {
-					outline: 1px dotted #66afe9;
-				}
-
-				&:hover {
-					td {
-						background: @blue-sky;
-					}
-				}
-
-				td {
-					background: @blue-slate;
-					color: @brand-info-dark;
-				}
-
-				td:first-child {
-					padding-left: 30px;
-				}
-			}
-
 
 
 
@@ -153,6 +132,31 @@
 				&:hover td {
 					background: @selectableHover;
 					cursor: pointer;
+				}
+
+				&.selected {
+					&:focus {
+						outline: 1px dotted #66afe9;
+					}
+
+					&:hover {
+						td {
+							background: @blue-sky;
+						}
+					}
+
+					td {
+						background: @blue-slate;
+						color: @brand-info-dark;
+						&.sorted {
+							background: darken(@blue-slate, 5%);
+							color: darken(@brand-info-dark, 5%);
+						}
+					}
+
+					td:first-child {
+						padding-left: 30px;
+					}
 				}
 			}
 
