--- a/scss/bootstrap-override/alerts.scss
+++ b/scss/bootstrap-override/alerts.scss
@@ -15,13 +15,13 @@
 
 
 	&:before {
-		.fuelux-icon;
-		.fuelux-icon-warning;
+		@include fuelux-icon;
+		@include fuelux-icon-warning;
 		content: '';
 		position: absolute;
 		left: 4px;
 		top: 4px;
-		.alert-icon-size;
+		@include alert-icon-size;
 	}
 }
 
@@ -48,7 +48,7 @@
 	padding: 6px 21px 6px 34px;
 	position: relative;
 
-	.alert-before;
+	@include alert-before;
 
 	strong {
 		font-weight: bold;
